# tryMCPServer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: hubspot_client.py  main.py  models.py
app/dependencies/: __init__.py  database.py  repositories.py  services.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  hubspot.py  matching.py  sync.py
app/domain/exceptions/: __init__.py  base.py  contact.py  hubspot.py  job.py
app/domain/interfaces/: __init__.py  crm_client.py  repositories.py  unit_of_work.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  connection.py  unit_of_work.py
app/infrastructure/task/: __init__.py  async_executor.py
app/repositories/: __init__.py  base.py  contact_repository.py  push_job_repository.py
app/routers/: __init__.py  health.py  push.py
app/schemas/: __init__.py  contact.py  enums.py  push_job.py
app/schemas/requests/: __init__.py  push.py
app/schemas/responses/: __init__.py  error.py  health.py  push.py
app/services/: __init__.py  contact_matching_service.py  job_executor_service.py  push_service.py
tests/: conftest.py  test_contact_matching_service.py  test_push_service.py
