[project]
name = "technical-test"
version = "0.1.0"
description = "Scalability technical test"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
